Toggling results and alphabet

--- a/hangman/css/style.css
+++ b/hangman/css/style.css
@@ -35,6 +35,11 @@ img {
   cursor: not-allowed;
 }
 
+.header {
+  text-align: center;
+  margin: 1em auto;
+}
+
 .incorrect-guess {
   background: #6c6c6c;
   color: white;
